contain-rs-macro/tests/images/fail_0.stderr
error: Expected only one container annotation
  --> tests/images/fail_0.rs:10:1
   |
10 | #[container()]
   | ^^^^^^^^^^^^^^
